tests/error/comptime/pointer_arithmetic10.bz
function test()
{
	(consteval {
		const p = __builtin_comptime_malloc([int32, int32], 1);
		defer __builtin_comptime_free(p);
		__builtin_inplace_construct(p, [ 0, 0 ]);
		let inner_p: *int32 = &(*p)[0];
		__builtin_destruct_value(*p);
		inner_p + 1;
	});
}
